# kNN-and-Clustering-on-Curves-and-Time-Series

./: .gitignore  CMakeLists.txt
cont_frechet_repo/Fred/include/: curve.hpp  frechet.hpp  grid.hpp  interval.hpp  point.hpp  simplification.hpp  types.hpp
cont_frechet_repo/Fred/src/: curve.cpp  frechet.cpp  point.cpp  simplification.cpp
data/: cluster.conf  nasd_input_small.csv  nasd_query.csv  nasd_query_small.csv  nasdaq2015_2017.csv  testdata.txt
src/bruteforce/: brute_force_knn.cpp  brute_force_knn.hpp  brute_force_nn.cpp  brute_force_nn.hpp
src/clustering/: cluster.cpp  cluster.hpp  cluster_template.cpp  cluster_template.hpp  complete_binary_tree.cpp  complete_binary_tree.hpp
src/curve/: curve.cpp  curve.hpp  grid.cpp  grid.hpp  point.hpp
src/hypercube/: hypercube.cpp  hypercube.hpp
src/lsh/: lsh.cpp  lsh.hpp
src/lsh/hash_functions/: amplified_hf.cpp  amplified_hf.hpp  hash_function.cpp  hash_function.hpp
src/lsh/hashtable/: hashtable.cpp  hashtable.hpp
src/search/: search.cpp  search.hpp
src/util/: utilities.cpp  utilities.hpp
src/util/dataset/: dataset.cpp  dataset.hpp
src/util/files/: file_reader.cpp  file_reader.hpp
src/util/metrics/: metrics.cpp  metrics.hpp
tests/: main_cluster.cpp  main_cont_frechet.cpp  main_discr_frechet.cpp  main_euclidean.cpp  main_euclidean_hypercube.cpp  main_euclidean_lsh.cpp  main_hc.cpp  main_lsh.cpp  main_search.cpp  test_cbt.cpp  test_dfd.cpp  unit_tests.cpp
